--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "1.15.17",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.feature.characters-animation": "1.0.0",
+    "com.unity.feature.cinematic": "1.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.feature.worldbuilding": "1.0.1",
     "com.unity.ide.rider": "3.0.14",
